--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
     <div class="main-container">
         <header>
-            <h1>WBJEE Research Platform</h1>
+            <h1>WBJEE College Predictor</h1>
             <p class="subtitle">Predict, Explore, and Plan Your Engineering Future</p>
         </header>
 
